# hodu

./: CONTRIBUTING.md  Cargo.toml  README.md  THIRD-PARTY.md  justfile
hodu/: Cargo.toml  README.md
hodu/examples/: cnn_classifier.rs  deploy.rs  linear_regression.rs  lstm_seqcls.rs  mlp_classifier.rs  transformer_seqcls.rs
hodu/src/: data.rs  lib.rs  loss.rs  metrics.rs  nn.rs  optim.rs  prelude.rs  serialize.rs
hodu/src/data/: dataset.rs  loader.rs  tests.rs  types.rs
hodu/src/nn/: activation.rs  attention.rs  batchnorm.rs  conv.rs  dropout.rs  embedding.rs  flatten.rs  init.rs  leaf.rs  linear.rs  norm.rs  param.rs  pool.rs  quant.rs  rnn.rs  sequential.rs  transformer.rs
hodu/src/nn/conv/: conv1d.rs  conv2d.rs  conv3d.rs  direct.rs  transpose.rs  transpose1d.rs  transpose2d.rs  transpose3d.rs
hodu/src/nn/norm/: batch.rs  group.rs  instance.rs  layer.rs  rms.rs
hodu/src/optim/: adam.rs  grad.rs  rmsprop.rs  scaler.rs  sched.rs  scheduler.rs  sgd.rs
hodu/src/serialize/: container.rs  gguf.rs  model.rs  runnable.rs  safetensors.rs
hodu/tests/: batchnorm.rs  classify.rs  cnn.rs  conv_backward.rs  dropout.rs  lm.rs  metal.rs  norm_backward.rs  pool_backward.rs  quant.rs  rnn.rs  safetensors.rs  serialize.rs  train.rs  transformer.rs
hodu_core/: Cargo.toml  README.md
hodu_core/src/: ctx.rs  lib.rs  tensor.rs
hodu_core/src/ctx/: build.rs  train.rs
hodu_core/src/tensor/: activation.rs  attention.rs  broadcast.rs  conv.rs  elementwise.rs  explog.rs  indexing.rs  linalg.rs  loss.rs  movement.rs  norm.rs  operators.rs  pool.rs  reduce.rs  shape.rs
(+20 files in other folders)
