[package]
name = "hodu"
description = "Rust ML framework: a zero-cost user layer over the kurumi engine."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hodu_core = { path = "../hodu_core", version = "0.3.0" }

[lints]
workspace = true
