[package]
name = "hodu"
description = "Rust ML framework: a zero-cost user layer over the kurumi engine."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
hodu_core = { path = "../hodu_core", version = "0.3.0" }
safetensors = "0.6"  # HuggingFace .safetensors interop (frontend-only; kurumi stays dep-light)
memmap2 = "0.9"  # mmap-backed zero-copy .hodu weight loading (frontend-only; kurumi stays lean)

[lints]
workspace = true
